// Generated by github.com/davyxu/tabtoy
// Version: 2.8.10
// DO NOT EDIT!!

package table;


// Defined in table: ItemBase
message ItemBase
{	
	
	
	repeated ItemBaseDataDefine ItemBaseData = 1; // ItemBaseData

}

// Defined in table: ItemBaseData
message ItemBaseDataDefine
{	
	
	
	optional uint32 Id = 1; // 道具ID
	
	
	optional int32 Type = 2; // 道具类型
	
	
	optional string Name = 3; // 道具名
	
	
	optional string Desc = 4; // 道具简介

}

