// Generated by github.com/davyxu/tabtoy
// Version: 2.8.10
// DO NOT EDIT!!

package table;


// Defined in table: MailBase
message MailBase
{	
	
	
	repeated MailDefine Mail = 1; // Mail

}

// Defined in table: Mail
message MailDefine
{	
	
	
	optional int32 Id = 1; // id(规则是类型*1000+顺序码)
	
	
	optional string Title = 2; 
	
	
	optional int32 Type = 3; 
	
	
	optional string Content = 4; 

}

